feat: implementação de Web Socket para atualizar informações em tempo real